[gd_scene load_steps=28 format=3 uid="uid://bq4qgw7gatcxh"]

[ext_resource type="Script" path="res://scene/battle/battle.gd" id="1_hq3gy"]
[ext_resource type="Texture2D" uid="uid://brh021werho36" path="res://resources/Dungeon.png" id="1_l54bl"]
[ext_resource type="PackedScene" uid="uid://dsij8j3k8sm68" path="res://scene/enemy/rat.tscn" id="2_kwoat"]
[ext_resource type="PackedScene" uid="uid://buu5mmlq00lds" path="res://scene/battle/player_stats.tscn" id="3_6203m"]
[ext_resource type="PackedScene" uid="uid://1k2vbjle40t4" path="res://scene/enemy/slime.tscn" id="3_os6jx"]
[ext_resource type="PackedScene" uid="uid://1hb1m4o73o1x" path="res://scene/enemy/phantom.tscn" id="4_6oh0d"]
[ext_resource type="PackedScene" uid="uid://doy0aht6dms57" path="res://scene/ui/ui_base.tscn" id="5_oluxh"]
[ext_resource type="Script" path="res://scene/swipecontrol/swipe_control.gd" id="6_f3nna"]
[ext_resource type="StyleBox" uid="uid://dxlcdqfs66qkx" path="res://scene/resource/panel_log.tres" id="8_ooyfd"]
[ext_resource type="PackedScene" uid="uid://chx1y1n7rm066" path="res://scene/effect/low_health_overlay.tscn" id="9_dugri"]
[ext_resource type="AudioStream" uid="uid://dpe2h8t7eimxn" path="res://resources/SFX/door.ogg" id="10_a7s03"]
[ext_resource type="AudioStream" uid="uid://db7m3b800t2q8" path="res://resources/SFX/attack_hit.ogg" id="11_02vab"]
[ext_resource type="FontFile" uid="uid://bcax8tpy61quc" path="res://resources/PixelRPG.ttf" id="11_dn3s2"]
[ext_resource type="AudioStream" uid="uid://7gi2781vb4tt" path="res://resources/SFX/attack_miss.ogg" id="12_w7ny1"]
[ext_resource type="AudioStream" uid="uid://ljthm0pmg3yh" path="res://resources/SFX/heal.ogg" id="13_bh65g"]
[ext_resource type="AudioStream" uid="uid://cw6svjiirrfqx" path="res://resources/SFX/shield.ogg" id="14_qttyq"]
[ext_resource type="AudioStream" uid="uid://k2khqpie7jv0" path="res://resources/SFX/negative.ogg" id="17_k6u74"]
[ext_resource type="AudioStream" uid="uid://c814ml3q3dcgv" path="res://resources/VO/enemydefeat.ogg" id="18_cy3gy"]

[sub_resource type="Animation" id="Animation_a8mty"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_binau"]
resource_name = "low"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.392157), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tw3j3"]
_data = {
"RESET": SubResource("Animation_a8mty"),
"low": SubResource("Animation_binau")
}

[sub_resource type="Theme" id="Theme_ccrgn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_auid2"]

[sub_resource type="Animation" id="Animation_wa82y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_a2h6k"]
resource_name = "fade battle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"hide_logo"
}]
}

[sub_resource type="Animation" id="Animation_lcfc5"]
resource_name = "fade'"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"hide_logo"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lfv8g"]
_data = {
"RESET": SubResource("Animation_wa82y"),
"fade battle": SubResource("Animation_a2h6k"),
"fade'": SubResource("Animation_lcfc5")
}

[node name="Battle" type="Node"]
script = ExtResource("1_hq3gy")
enemies = Array[PackedScene]([ExtResource("2_kwoat"), ExtResource("3_os6jx"), ExtResource("4_6oh0d")])

[node name="PlayerStats" parent="." instance=ExtResource("3_6203m")]

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(45, 80)
texture = ExtResource("1_l54bl")

[node name="UIBase" parent="." instance=ExtResource("5_oluxh")]

[node name="LowHealthOverlay" parent="UIBase" instance=ExtResource("9_dugri")]

[node name="LowHealthAnimation2" type="AnimationPlayer" parent="UIBase/LowHealthOverlay"]
autoplay = "low"
libraries = {
"": SubResource("AnimationLibrary_tw3j3")
}

[node name="Log" type="Panel" parent="UIBase"]
layout_mode = 0
offset_top = 132.0
offset_right = 90.0
offset_bottom = 159.0
theme = SubResource("Theme_ccrgn")
theme_override_styles/panel = ExtResource("8_ooyfd")

[node name="LogText" type="RichTextLabel" parent="UIBase/Log"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("11_dn3s2")
theme_override_font_sizes/normal_font_size = 5

[node name="SwipeScreenButton" type="TouchScreenButton" parent="UIBase"]
position = Vector2(45, 80)
scale = Vector2(4.55257, 7.98682)
shape = SubResource("RectangleShape2D_auid2")
script = ExtResource("6_f3nna")

[node name="Label" type="Label" parent="UIBase"]
layout_mode = 0
offset_left = -1.0
offset_top = 99.0
offset_right = 39.0
offset_bottom = 122.0
theme_override_fonts/font = ExtResource("11_dn3s2")
theme_override_font_sizes/font_size = 6
text = "Lantai :"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="UIBase"]
layout_mode = 0
offset_left = -1.0
offset_top = 109.0
offset_right = 39.0
offset_bottom = 132.0
theme_override_fonts/font = ExtResource("11_dn3s2")
theme_override_font_sizes/font_size = 6
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Fade" type="ColorRect" parent="."]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lfv8g")
}

[node name="Door" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_a7s03")

[node name="Slash" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_02vab")

[node name="Miss" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_w7ny1")

[node name="Heal" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_bh65g")
volume_db = -15.0

[node name="Shield" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_qttyq")

[node name="Negative" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_k6u74")

[node name="NextRoom" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_cy3gy")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
